--- a/dist.ini
+++ b/dist.ini
@@ -1,8 +1,16 @@
 name = App-Burp
 
 [Prereqs]
-perl              = 5.010001
-Class::Usul       = 0.65.0
+perl               = 5.010001
+strictures         = 2.000000
+namespace::autoclean = 0.26
+Class::Usul        = 0.78.0
+Daemon::Control    = 0.001006
+Data::Validation   = 0.27.0
+File::ChangeNotify = 0.26
+File::DataClass    = 0.71.0
+Moo                = 2.001001
+Unexpected         = 0.45.0
 
 [Prereqs / ConfigureRequires]
 version           = 0.88
