Restarts when config file changes

--- a/dist.ini
+++ b/dist.ini
@@ -6,7 +6,6 @@ strictures         = 2.000000
 namespace::autoclean = 0.26
 Class::Usul        = 0.78.0
 Daemon::Control    = 0.001006
-Data::Validation   = 0.27.0
 File::ChangeNotify = 0.26
 File::DataClass    = 0.71.0
 Moo                = 2.001001
@@ -63,7 +62,7 @@ exclude_filename  = cpanfile
 
 ; So apparently order matters
 [ReadmeAnyFromPod]
-[Signature]
+;[Signature]
 [AbstractFromPOD]
 [LicenseFromModule]
 [VersionFromModule]
