Wraps command in try catch

--- a/dist.ini
+++ b/dist.ini
@@ -9,6 +9,7 @@ Daemon::Control    = 0.001006
 File::ChangeNotify = 0.26
 File::DataClass    = 0.71.0
 Moo                = 2.001001
+Try::Tiny          = 0.22
 Unexpected         = 0.45.0
 
 [Prereqs / ConfigureRequires]
